--- a/index.html
+++ b/index.html
@@ -2,13 +2,35 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/style.css"> 
     <title>Slot Machine</title>
+    <style>
+        #app {
+            position: relative;
+            height: 100vh;
+        }
+
+        #spinButton {
+            position: absolute;
+            bottom: 20px;
+            right: 20px;
+            padding: 20px 40px;
+            font-size: 30px;
+            border: none;
+            border-radius: 10px;
+            background-color: #3498db;
+            color: white;
+            cursor: pointer;
+            z-index: 1;
+        }
+    </style>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app">
+      <div id="canvas"></div>
+      <button id="spinButton">Spin</button>
+    </div>
     <script type="module" src="/main.js"></script>
   </body>
 </html>
